kubecost/kubecost-exporter-nodeport.yaml
apiVersion: v1
kind: Service
metadata: 
  name: kubecost-service 
  namespace: cost-analyzer 
spec:
  type: NodePort #ClusterIP
  selector: 
    app: cost-analyzer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9090
    nodePort: 10003
